--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
+
+
 @import "tailwindcss";
+
 
 :root {
   --background: #ffffff;
@@ -22,5 +25,13 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  
+}
+
+.menu a {
+    font-weight: 500;
+    color: #4b5563; /* text-gray-700 */
+  }
+  .menu a:hover {
+    color: #1f2937; /* text-gray-900 */
 }
